Update via Hawai Editor

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <form id="loginForm" class="form">
         <label class="label">
-          Email
+          Email231234
           <input id="email" class="input" type="email" placeholder="contoh@pikul.id" required />
         </label>
 
